--- a/package.json
+++ b/package.json
@@ -2,5 +2,10 @@
   "name": "dapp-dex",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "chai": "^4.3.7",
+    "chai-bn": "^0.3.1",
+    "truffle-assertions": "^0.9.2"
+  }
 }
