--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chai": "^4.3.7",
     "chai-bn": "^0.3.1",
     "truffle": "^5.11.2",
-    "truffle-assertions": "^0.9.2"
+    "truffle-assertions": "^0.9.2",
+    "web3": "^4.1.1"
   }
 }
