--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
     "chai-bn": "^0.3.1",
     "truffle": "^5.11.2",
     "truffle-assertions": "^0.9.2",
-    "web3": "^4.1.1"
+    "web3": "1.5.2"
   }
 }
